# studies

./: .dockerignore  .gitignore  Cargo.toml  Makefile  README.md  nx.json  package-lock.json  package.json
apps/rust/concurrency/: Cargo.toml  project.json
apps/rust/concurrency/src/: lib.rs  main.rs  passing_message.rs  shared_state.rs  simple_example.rs
apps/rust/ds/: Cargo.toml  project.json
apps/rust/ds/src/: main.rs
apps/rust/enums/: Cargo.toml  project.json
apps/rust/enums/src/: main.rs
apps/rust/errors/: Cargo.toml  project.json
apps/rust/errors/src/: main.rs
apps/rust/generics/: Cargo.toml  project.json
apps/rust/generics/src/: lib.rs  main.rs
apps/rust/iterators_n_closures/: Cargo.toml  project.json
apps/rust/iterators_n_closures/src/: lib.rs  main.rs  shoes_company.rs  t_shirt_company.rs
apps/rust/lib/: Cargo.toml  project.json
apps/rust/lib/src/: lib.rs  main.rs  restaurant.rs
apps/rust/minigrep/: Cargo.toml  project.json
apps/rust/minigrep/src/: lib.rs  main.rs
apps/rust/oop/: Cargo.toml  project.json
apps/rust/oop/src/: main.rs
apps/rust/ownership_mistakes/: Cargo.toml  project.json
apps/rust/ownership_mistakes/src/: main.rs
apps/rust/patterns_matching/: Cargo.toml  project.json
apps/rust/slice/: Cargo.toml  project.json
apps/rust/smart_pointers/: Cargo.toml  project.json
apps/rust/structs/: Cargo.toml  project.json
apps/rust/testing/: Cargo.toml  project.json
apps/rust/web_server/: Cargo.toml  project.json
apps/ts/oop/: README.md  jest.config.ts  project.json
libs/rust/math/: Cargo.toml  project.json
(+19 files in other folders)
