
[workspace]
resolver = '2'
members = [
	'apps//rust/oop',
	'apps//rust/ownership_mistakes',
	'apps//rust/minigrep',
	'apps//rust/slice',
	'apps//rust/structs',
	'apps//rust/enums',
	'apps//rust/lib',
	'apps//rust/ds',
	'apps//rust/errors',
	'apps//rust/generics',
	'apps//rust/testing',
	'libs//rust/math',
	'apps//rust/iterators_n_closures',
	'apps//rust/smart_pointers',
	'apps//rust/concurrency',
	'apps//rust/patterns_matching',
	'apps//rust/web_server',
]

[profile.release]
lto = true
